in slotSaveMessage(), handle the possibility of an invalid message item in cleanSubject(), handle the possbility of an null KMime::Message

BUG: 300837
FIXED-IN: 4.8.4
MERGE: 4.8